Fix footer spacing without breaking CV

--- a/_sass/layout/_base.scss
+++ b/_sass/layout/_base.scss
@@ -5,7 +5,6 @@ html {
   /* sticky footer fix */
   position: relative;
   min-height: 100%;
-  height: 100%;
 }
 
 body {
@@ -15,9 +14,6 @@ body {
 
   margin: 0;
   padding: $masthead-height 0 0;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   font-family: $global-font-family;
   line-height: 1.5;
 
