--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -16,8 +16,7 @@
   /* keep footer in normal document flow so custom widgets do not overlap content */
   height: auto;
 
-  flex-shrink: 0;
-  margin-top: auto;
+  margin-top: 3em;
 
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
